--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@cmann50/mcp-chrome-google-search",
   "version": "1.0.0",
   "type": "module",
+  "bin": {
+    "mcp-chrome-google-search": "./dist/cli.js"
+  },
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
