--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "@cmann50/mcp-chrome-google-search",
   "version": "1.0.3",
   "type": "module",
-  "bin": "./dist/cli.js",
+  "bin": {
+    "mcp-chrome-google-search": "./dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && chmod +x dist/*.js",
+    "prepare": "npm run build",
     "start": "node dist/index.js"
   },
   "dependencies": {
